--- a/styles/style.css
+++ b/styles/style.css
@@ -195,8 +195,11 @@ body
  border-radius: 10px 0 10px 0;
  box-shadow: 0 0 10px white;
  
+ outline: none;
+
  transition: 0.9s;
 }
+
 
 .block:hover>.btn_join:hover
 {
