--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ body
  background: url("images/background.jpg") 100% 100% no-repeat;
  background-size: cover;
  background-attachment: fixed;
+ transition: 5s;
 }
 
 #header
