--- a/styles/style_deals_accession.css
+++ b/styles/style_deals_accession.css
@@ -14,6 +14,6 @@
 
 @font-face
 {
-    font-family: Pacifico; /* Гарнитура шрифта */
-    src: url( Fonts/Pacifico.ttf ); /* Путь к файлу со шрифтом */
+    font-family: Pacifico;
+    src: url( Fonts/Pacifico.ttf );
 }
