--- a/styles/style_my_accession.css
+++ b/styles/style_my_accession.css
@@ -1,13 +1,7 @@
-.img_progress
-{
-	margin: auto;
-
-	position: relative;
-	top: 10px;
-}
-
 #fail
-{
+{	
+	position: relative;
+	margin: auto;
 	width: 300px;
 	height: 175px;
 	top: 15px;
@@ -23,9 +17,10 @@
 
 #done
 {
+	margin: auto;
 	width: 48px;
 	height: 48px;
-	top: 5px;
+
 	background: url( "images/Tick.png" ) 100% 100% no-repeat;
 	background-size: cover;
 
@@ -33,18 +28,26 @@
 	Animation-direction: Normal;
 }
 
-#done:hover
+
+.block:hover #done
 {
-	background: url( "images/tick_hover.png" ) 100% 100% no-repeat;
+	background: url( "images/tick_orange.png" ) 100% 100% no-repeat;
 	background-size: cover;
     animation: done 0.95s infinite;
+}
+
+.block:hover #done:hover
+{
+	background: url( "images/tick_orange_hover.png" ) 100% 100% no-repeat;
+	background-size: cover;
+    animation: done 1.99s infinite;
 }
 
 @keyframes done
 {
   50%
 	{
-		transform: scaleX(0.8) scaleY(0.8);
+		transform: scaleX(0.9) scaleY(0.9);
     }
 }
 
